add request to post DNA key

--- a/application/views/data/show.pug
+++ b/application/views/data/show.pug
@@ -27,7 +27,7 @@ block content
           a.btn.btn-secondary.btn-sm.mr-4(href=data.key+'/list-operations')
             | See History Operation
           
-          a.btn.btn-primary.btn-sm(href=data.key+'/list-operations')
+          a.btn.btn-primary.btn-sm(href='/dnaKey/' + data.id)
             | See Decryption Key
       include components/data-show-form.pug
     .card
