--- a/application/views/data/processed-data-new.pug
+++ b/application/views/data/processed-data-new.pug
@@ -25,6 +25,11 @@ block content
               .form-group
                 label(for='magnet_link') DNA magnetic link
                 input#magnet_link.form-control.form-control-user(name='metadata[magnet_link]' type='text')
+              .form-group
+                label(for='secret_key') Secret Key
+                a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" 
+                data-content="Optional. Key used to encrypt and decrypt DNA. It will be securely stored outside Blockchain")
+                input#organization.form-control.form-control-user(name='secret_key' type='text')
               hr
               .float-right.mb-4.inline-block
                 a.btn.btn-danger.btn-user.mr-3.px-5(href='/data')
