--- a/application/views/data/raw-data-new.pug
+++ b/application/views/data/raw-data-new.pug
@@ -15,18 +15,18 @@ block content
             form.user(action='/data/raw-data-create' method='post')
               .form-group
                 label(for='title') Name
-                input#title.form-control.form-control-user(name='metadata[title]' type='text')
+                input#title.form-control.form-control-user(name='metadata[title]' type='text' required)
               .form-group
                 label(for='description') Description
-                textarea#exampleFormControlTextarea1.form-control(name='metadata[description]' rows='3' type = 'text')
+                textarea#exampleFormControlTextarea1.form-control(name='metadata[description]' rows='3' type = 'text' required)
               .form-group
                 label(for='magnet_link') Magnetic Link
-                input#organization.form-control.form-control-user(name='metadata[magnet_link]' type='text')
+                input#organization.form-control.form-control-user(name='metadata[magnet_link]' type='text' required)
               .form-group
                 label(for='secret_key') Secret Key
                 a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" 
                 data-content="Optional. Key used to encrypt and decrypt DNA. It will be securely stored outside Blockchain")
-                input#organization.form-control.form-control-user(name='secret_key' type='text')
+                input#organization.form-control.form-control-user(name='secret_key' type='text' required)
               hr
               .float-right.mb-4.inline-block
                 a.btn.btn-danger.btn-user.mr-3.px-5(href='/data')
