--- a/application/views/dnaContract/new.pug
+++ b/application/views/dnaContract/new.pug
@@ -22,12 +22,12 @@ block content
                     data-content="Price that the raw DNA is sold, being fully transfered to the collector. \
                       <br> The processors, to obtain the raw DNA to be processed, must deposit this value in escrow. \
                       The escrow will be closed after the insertion of processed DNA")
-                  input.form-control.bio-money-input(name='raw_data_price' type='text')
+                  input.form-control.bio-money-input(name='raw_data_price' type='text' required)
                 .form-group.col-md-6
                   label.mb-1(for='processed_data_price') Processed Data Price
                   a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" 
                     data-content="Price that the processed DNA is sold. This value will be transfered acording to the 'payment distribution'")
-                  input.form-control.bio-money-input(name='processed_data_price' type='text')
+                  input.form-control.bio-money-input(name='processed_data_price' type='text' required)
 
               hr.mt-4
               h6.mb-3  Payment Distribution (in percentage)
@@ -35,19 +35,19 @@ block content
                 .form-group.col-md-3
                   label.mb-1(for='price') Collector ( #{contractParameters.collector.min} - #{contractParameters.collector.max} )
                   a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="You, who inserts the raw DNA.")
-                  input#price.form-control.percentage(name='payment_distribution[collector]' type='text')
+                  input#price.form-control.percentage(name='payment_distribution[collector]' type='text' required)
                 .form-group.col-md-3
                   label.mb-1(for='price') Processor ( #{contractParameters.processor.min} - #{contractParameters.processor.max} )
                   a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="Who process the DNA")
-                  input#price.form-control.percentage(name='payment_distribution[processor]' type='text')
+                  input#price.form-control.percentage(name='payment_distribution[processor]' type='text' required)
                 .form-group.col-md-3 
                   label.mb-1(for='price') Validators ( #{contractParameters.validators.min} - #{contractParameters.validators.max} )
                   a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="Those who validate the processor work (0-2 validators). The reward will be distributed equaly between then")
-                  input#price.form-control.percentage(name='payment_distribution[validators]' type='text' readonly value=0)
+                  input#price.form-control.percentage(name='payment_distribution[validators]' type='text' readonly value=0 required)
                 .form-group.col-md-3
                   label.mb-1(for='price') Curator ( #{contractParameters.curator.min} - #{contractParameters.curator.max} )
                   a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="Who certificate that the DNA is legitim and correct")
-                  input#price.form-control.percentage(name='payment_distribution[curator]' type='text' readonly value=0)
+                  input#price.form-control.percentage(name='payment_distribution[curator]' type='text' readonly value=0 required)
 
               hr.mt-4
               h6.mb-3  Royalty Payments
