:tada: first commit - changed login sidebar layout

--- a/application/views/layout/loginLayout.pug
+++ b/application/views/layout/loginLayout.pug
@@ -12,7 +12,7 @@ block header
 
 body
   #wrapper
-    include sidebar.pug
+    include loginSidebar.pug
     #content-wrapper.d-flex.flex-column.bg-secondary
       #content
         block content
