--- a/application/views/session/new.pug
+++ b/application/views/session/new.pug
@@ -32,7 +32,7 @@ block content
                                     input.btn.btn-primary.px-3(type='submit' value='Add')
                         .card-footer.text-center
                             .small
-                            a(href='auth-register-basic.html') YOu need Certificate? Click here!
+                            a(href='auth-register-basic.html') You need Certificate? Click here!
 
 
 block append scripts
