--- a/application/views/home/home.pug
+++ b/application/views/home/home.pug
@@ -49,3 +49,35 @@ block content
                 .text-xs.font-weight-bold.text-warning.text-uppercase.mb-1 Pending Requests
                 .h5.mb-0.font-weight-bold.text-gray-800 18
               .col-a
+      
+      .col-xl-2.col-md-4.mb-2
+      .col-xl-550.col
+        .col.mr-6
+          .card-body
+            .col.align-items-center
+              .row.no-gutters.align-items-center
+                .col.mr-2          
+                  // Pending Requests Card Example
+                  .col-xl-550.col-md-10.mb-4
+                      .col.mr-6
+                        .align.center.mb-10.inline-block
+                          a.btn.btn-success.btn-user.btn-block.btn-lg.mr-0.px-5(href='/data/new')
+                              | Insert DNA
+                        .col-auto
+                  
+                  // Pending Requests Card Example
+                  .col-xl-550.col-md-10.mb-4
+                      .col.mr-6
+                        .align.center.mb-10.inline-block
+                          a.btn.btn-success.btn-user.btn-block.btn-lg.mr-0.px-5(href='/processable-data')
+                            | Process DNA                     
+                        .col-auto
+
+                  // Pending Requests Card Example
+                  .col-xl-550.col-md-10.mb-4
+                      .col.mr-6
+                        .align.center.mb-10.inline-block
+                          a.btn.btn-success.btn-user.btn-block.btn-lg.mr-0.px-5(href='/data-buy')
+                            | Buy DNA
+                        .col-a
+
