improve message in process data

--- a/application/views/processableData/components/process-modal.pug
+++ b/application/views/processableData/components/process-modal.pug
@@ -12,7 +12,9 @@
           input#type(hidden name='type' type='text' value='process')
 
           .mb-3
-            | Click in &quot;Process&quot; below to create a process request
+            | Some Biocoins will be retained from your account. You can redeem them after uploading processed DNA. 
+          .mb-3
+            | Click in &quot;Process&quot; below to continue
 
           .modal-footer
             button.btn.btn-secondary(type='button' data-dismiss='modal') Cancel
