--- a/application/views/layout/layout.pug
+++ b/application/views/layout/layout.pug
@@ -24,10 +24,11 @@ body
         .container.mt-4
           if(messages)
             if(messages.success)
-              .alert.alert-primary.alert-dismissible.fade.show(role=alert)
-                = messages.success
-                button.close(type="button" data-dismiss="alert" aria-label="Close")
-                  span(aria-hidden="true") &times;
+              each successMessage in messages.success
+                .alert.alert-primary.alert-dismissible.fade.show(role=alert)
+                  = successMessage
+                  button.close(type="button" data-dismiss="alert" aria-label="Close")
+                    span(aria-hidden="true") &times;
             if(messages.error)
               .alert.alert-danger.alert-dismissible.fade.show(role=alert)
                 = messages.error
