change message on process request creation

--- a/application/views/processableData/components/process-modal.pug
+++ b/application/views/processableData/components/process-modal.pug
@@ -12,7 +12,7 @@
           input#type(hidden name='type' type='text' value='process')
 
           .mb-3
-            | Some Biocoins will be retained from your account. You can redeem them after uploading processed DNA. 
+            | You will use some Biocoins to create a bond. You can redeem it after uploading processed DNA. 
           .mb-3
             | Click in &quot;Process&quot; below to continue
 
