--- a/application/views/account/show.pug
+++ b/application/views/account/show.pug
@@ -25,21 +25,36 @@ block content
               input#id.form-control(disabled type='text'  value=account.created_at)
         .card-header Available Tokens
         .card-body
-          each token, index in account.tokens 
-            form
-              .form-row
-                .form-group.col-md-3
-                  label.mb-1(for='type') Type
-                  input#type.form-control(disabled type='text' value= token.type)
-                .form-group.col-md-3
-                  label.mb-1(for='value') Value
-                  input#value.form-control.bio-money(disabled type='text'  value=token.value)
-                .form-group.col-md-3
-                  label.mb-1(for='payment-intention-id') PaymentIntentionId
-                  input#payment-intention-id.form-control(disabled type='text' value= token.payment_intention_id)
-                .form-group.col-md-3
-                  label.mb-1(for='expiration-date') Expiration Date
-                  input#expiration_date.form-control(disabled type='text'  value=token.expiration_date)
+          form
+            each token, index in account.tokens 
+              if(token.type=='process_token')
+                .form-row
+                  .form-group.col-md-3
+                    label.mb-1(for='type') Type
+                    input#type.form-control(disabled type='text' value= token.type)
+                  .form-group.col-md-3
+                    label.mb-1(for='value') Value
+                    input#value.form-control.bio-money(disabled type='text'  value=token.value)
+                  .form-group.col-md-3
+                    label.mb-1(for='process_request_id') Process Request Id
+                    input#process_request_id.form-control(disabled type='text' value= token.process_request_id)
+                  .form-group.col-md-3
+                    label.mb-1(for='expiration-date') Expiration Date
+                    input#expiration_date.form-control(disabled type='text'  value=token.expiration_date)
+              else
+                .form-row
+                  .form-group.col-md-3
+                    label.mb-1(for='type') Type
+                    input#type.form-control(disabled type='text' value= token.type)
+                  .form-group.col-md-3
+                    label.mb-1(for='value') Value
+                    input#value.form-control.bio-money(disabled type='text'  value=token.value)
+                  .form-group.col-md-3
+                    label.mb-1(for='payment-intention-id') PaymentIntentionId
+                    input#payment-intention-id.form-control(disabled type='text' value= token.payment_intention_id)
+                  .form-group.col-md-3
+                    label.mb-1(for='expiration-date') Expiration Date
+                    input#expiration_date.form-control(disabled type='text'  value=token.expiration_date)
             
 
 block append scripts
