--- a/application/views/processableData/components/backup-data-table.pug
+++ b/application/views/processableData/components/backup-data-table.pug
@@ -28,7 +28,7 @@
                 )
                   i.fas.fa-eye
                 a.btn.btn-primary.btn-sm.btn-circle.mr(
-                  data-placement="top" title="Process" data-toggle="tooltip"  href="/processable-data/show-data/" + data.id
+                  data-placement="top" title="Process" data-toggle="modal" data-target="#processModal"+index  href='#'
                 )
                   i.fas.fa-cogs
             include process-modal.pug
