add application/binding in project

--- a/application/views/session/new.pug
+++ b/application/views/session/new.pug
@@ -35,7 +35,7 @@ block content
                                 .alert.alert-danger.alert-dismissible.fade.show(role=alert)
                                     = messages.error
                             .small
-                                a(href='http://hyperledger.larc.usp.br:3000/') You need Certificate? Click here!
+                                a(href='http://amazonbiobank.duckdns.org:3000/' target="_blank") You need Certificate? Click here!
 
 
 block append scripts
